src/App.css
.overlay {
  position: relative;
  left: 0;
  top: 0;
  /*background-image: url("./static/background.jpg");*/
  background-color: darkslategrey;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}


.link{
  text-decoration: inherit;
}





.fa{
  cursor: pointer;
  margin-left: 15px;
}

.main-content{
  background-color: var(--primary);
  position: relative;
  width: 100%;
  height: 100%;
  padding: 50px 0 0;
  box-sizing: border-box;
  flex-wrap: wrap;
}

.h3{
  position: fixed;
  left: 40px;
  top: 55px;
  color:#7c795d;
  font-size: 10.5vw;
  z-index: 2;
}

.card{
  width: 27%;
  border-radius: 15px;
  flex-direction: column;
  position: relative;
  transform: scale(.8);
  transition: all .3s ease-in-out;
  margin-bottom: 50px;
  padding-top: 20px;
  z-index: 3;
}
@media screen and (max-width: 820px) {
  .card{
    width: 75%
  }
}

.card:hover {
  background-color: rgba(124,121,93, .7);
  transform: scale(1.1);
  cursor: pointer
}
.card:hover .btn{
  transform: scale(1.4);
  color: black;
}

.btn {
  transition: all .3s ease-in-out;
  font-size: 14px;
}

.card-img {
  margin-top: -5vw;
}
img {
  width: 200px;
}

.card-header {
  flex-direction: column;
  color: white;
  margin: 25px 0;
}

.h2 {
  font-size: 18px;
}

.p {
  font-size: 14px;
  text-align: center;
  color: white;
  margin: 8px 0;
}

.price {
  font-size: 25px;
  color: white;
}

.span {
  font-size: 15px;
  display: inline-block;
  vertical-align: top;
}


.slide{
  transition: all 1.5s ease-in-out;
  transform: translate(250%,0);
}



.flex-column {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.flex-row {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
}

#netlify-identity-widget{
  position: absolute;
  top: 20% !important;
  left: 10% !important;
  width: 80% !important;
  height: 65% !important;
  overflow: auto !important;
}

